--- a/content/Week1~5.html
+++ b/content/Week1~5.html
@@ -133,10 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Weeks.html'>Next</a> >> Weeks<br /><h1>About</h1>
-<p></p>
-<p>個人網站 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/content/index.html</a></p>
-<br /> <a href='Weeks.html'>Next</a> >> Weeks</div>
+    <div id="tipue_search_content">Weeks << <a href='Weeks.html'>Previous</a> <br /><h1>Week1~5</h1><br />Weeks << <a href='Weeks.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
