--- a/content/Weeks.html
+++ b/content/Weeks.html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Weeks.html'>Next</a> >> Weeks<br /><h1>About</h1>
-<p></p>
-<p>個人網站 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/content/index.html</a></p>
-<br /> <a href='Weeks.html'>Next</a> >> Weeks</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Week1~5.html'>Next</a> >> Week1~5<br /><h1>Weeks</h1>
+<br />About << <a href='About.html'>Previous</a> <a href='Week1~5.html'>Next</a> >> Week1~5</div>
         
     <!-- footer -->
       <div class="container">
