--- a/content/Week1~5.html
+++ b/content/Week1~5.html
@@ -133,7 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Weeks << <a href='Weeks.html'>Previous</a> <br /><h1>Week1~5</h1><br />Weeks << <a href='Weeks.html'>Previous</a> </div>
+    <div id="tipue_search_content">Weeks << <a href='Weeks.html'>Previous</a> <br /><h1>Week1~5</h1>
+<p>Week1</p><br />Weeks << <a href='Weeks.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
