--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,30 @@
 <h1>About</h1>
 <p></p>
 <p>個人網站 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/content/index.html</a></p>
+<p>個人簡報 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/reveal/index.html</a></p>
+<p>個人網誌 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/blog/index.html</a></p>
+<p>組員 : </p>
 <h1>Weeks</h1>
-<h2>Week1~5</h2>
+<h3>Week1</h3>
+<h6><span style="background-color: #ccffff;">Week1</span></h6>
+<p><span style="background-color: #ffff00;">建立個人倉儲cd2021</span></p>
+<p>1.下載kmol2021_spring_v2.7z，完成後開啟。</p>
+<p>2.登入個人github帳號，創建新的倉儲cd2021。</p>
+<p>3.進入tmp。</p>
+<p>4.輸入git clone --recurse-submodules https://github.com/40623121/cd2021.git 取得子模組資料。</p>
+<p>5.完成後，進入cmsimde資料夾輸入python wsgi.py開始編輯倉儲。</p>
+<p>6.於瀏覽器輸入https://localhost:9443/</p>
+<p>7.<span>編輯完成後，輸入git status檢查</span><span><span> </span>-&gt;</span><span> </span><span>git add .全部新增</span><span><span> </span>-&gt;</span><span> </span><span>git commit -m "項目名稱"</span><span><span> </span>-&gt;</span><span> </span><span>git push推送。   </span></p>
+<p><span></span></p>
+<p><span style="background-color: #ffff00;">從英文單字解釋了解何謂協同? 產品? 設計? 以及實習?</span></p>
+<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ffff00;">建立.leoID.txt</span></p>
+<p><span style="background-color: #ffffff;">針對 Leo Editor 6.3 在 Windows 10 無法正確建立 home/.leo/.leoID.txt，且打開leo會產生一個無限迴圈，所以要在home_ipv6創建一個.leo資料夾，並新增一個有隨意字串的.leoID.txt檔。</span></p>
+<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ffff00;">編輯 Leo Editor</span></p>
+<p><span style="background-color: #ffff00;"> </span></p>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week2~4</span></span></h3>
+<p><span style="background-color: #ccffff;">Week2</span></p>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week5~9</span></span></h3>
+<h3><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h3>
