--- a/content/Week5~9.html
+++ b/content/Week5~9.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1~5.html'>Week1~5</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li class='has-children'><a href='Week1.html'>Week1</a><ul class='dropdown'><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Weeks << <a href='Weeks.html'>Previous</a> <br /><h1>Week1~5</h1>
-<p>Week1</p><br />Weeks << <a href='Weeks.html'>Previous</a> </div>
+    <div id="tipue_search_content">Week2~4 << <a href='Week2~4.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18<br /><h1>Week5~9</h1>
+<br />Week2~4 << <a href='Week2~4.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18</div>
         
     <!-- footer -->
       <div class="container">
