--- a/content/Weeks.html
+++ b/content/Weeks.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1~5.html'>Week1~5</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li class='has-children'><a href='Week1.html'>Week1</a><ul class='dropdown'><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Week1~5.html'>Next</a> >> Week1~5<br /><h1>Weeks</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='Week1~5.html'>Next</a> >> Week1~5</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>Weeks</h1>
+<p>Week1</p>
+<p>Week2~4</p>
+<p>Week5~9</p>
+<p>Week10~18</p>
+<br />About << <a href='About.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</div>
         
     <!-- footer -->
       <div class="container">
