--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1~5.html'>Week1~5</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li class='has-children'><a href='Week1.html'>Week1</a><ul class='dropdown'><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,6 +136,9 @@ img.add_border {
     <div id="tipue_search_content"> <a href='Weeks.html'>Next</a> >> Weeks<br /><h1>About</h1>
 <p></p>
 <p>個人網站 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/content/index.html</a></p>
+<p>個人簡報 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/reveal/index.html</a></p>
+<p>個人網誌 : <a href="https://s40723227.github.io/cd2020/content/index.html" rel="nofollow">https://40623121.github.io/cd2021/blog/index.html</a></p>
+<p>組員 : </p>
 <br /> <a href='Weeks.html'>Next</a> >> Weeks</div>
         
     <!-- footer -->
