--- a/content/sitemap.html
+++ b/content/sitemap.html
@@ -121,7 +121,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li class='has-children'><a href='Week1.html'>Week1</a><ul class='dropdown'><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -132,4 +132,4 @@ img.add_border {
           </div>
           
         </header>
-    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Weeks.html'>Weeks</a><ul><li><a href='Week1.html'>Week1</a><ul><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li></ul></section></div></body></html>
+    </nav><section><h1>Site Map</h1><div id="tipue_search_content"></div><ul><li><a href='About.html'>About</a><li><a href='Weeks.html'>Weeks</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li></ul></section></div></body></html>
