--- a/content/Weeks.html
+++ b/content/Weeks.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li class='has-children'><a href='Week1.html'>Week1</a><ul class='dropdown'><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,10 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>Weeks</h1>
-<p>Week1</p>
-<p>Week2~4</p>
-<p>Week5~9</p>
-<p>Week10~18</p>
+<p><a href="https://40623121.github.io/cd2021/content/Week1.html">Week1</a></p>
+<p><a href="https://40623121.github.io/cd2021/content/Week2~4.html">Week2~4</a></p>
+<p><a href="https://40623121.github.io/cd2021/content/Week5~9.html">Week5~9</a></p>
+<p><a href="https://40623121.github.io/cd2021/content/Week10~18.html">Week10~18</a></p>
 <br />About << <a href='About.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</div>
         
     <!-- footer -->
