--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,9 +1,10 @@
 <h1>About</h1>
 <p></p>
+<p><a href="https://github.com/40623121/cd2021">個人倉儲</a></p>
 <p><a href="https://40623121.github.io/cd2021/content/index.html">個人網站</a></p>
 <p><a href="https://40623121.github.io/cd2021/reveal/index.html">個人簡報</a></p>
 <p><a href="https://40623121.github.io/cd2021/blog/index.html">個人網誌</a></p>
-<p>組員 : 40523252</p>
+<p>組員 : <a href="https://github.com/40523252/cd2021">40523252</a></p>
 <h1>Weeks</h1>
 <p><a href="https://40623121.github.io/cd2021/content/Week1.html">Week1</a></p>
 <p><a href="https://40623121.github.io/cd2021/content/Week2~4.html">Week2~4</a></p>
