--- a/content/Week2~4.html
+++ b/content/Week2~4.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li><a href='Week2~4.html'>Week2~4</a><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week1 << <a href='Week1.html'>Previous</a> <a href='Week5~9.html'>Next</a> >> Week5~9<br /><h1>Week2~4</h1>
-<p><span style="background-color: #ccffff;">Week2</span></p>
-<br />Week1 << <a href='Week1.html'>Previous</a> <a href='Week5~9.html'>Next</a> >> Week5~9</div>
+    <div id="tipue_search_content">Week1 << <a href='Week1.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2<br /><h1>Week2~4</h1>
+<br />Week1 << <a href='Week1.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</div>
         
     <!-- footer -->
       <div class="container">
