--- a/config/content.htm
+++ b/config/content.htm
@@ -4,6 +4,7 @@
 <p><a href="https://40623121.github.io/cd2021/content/index.html">個人網站</a></p>
 <p><a href="https://40623121.github.io/cd2021/reveal/index.html">個人簡報</a></p>
 <p><a href="https://40623121.github.io/cd2021/blog/index.html">個人網誌</a></p>
+<p><a href="https://40623121.github.io/stage1-ag2/content/index.html">分組網站</a></p>
 <p>組員 : <a href="https://github.com/40523252/cd2021">40523252</a></p>
 <h1>Weeks</h1>
 <p><a href="https://40623121.github.io/cd2021/content/Week1.html">Week1</a></p>
@@ -50,10 +51,25 @@
 <p>使用程式碼 : </p>
 <p>人工 : 在教室前面的其中一台電腦做一個excel表單，並派班代負責key資料，找好組員的人派其中一個代表去報學號，key完後依序排組序下來，這樣不僅不會出錯，組序也不會亂掉。</p>
 <p><span style="background-color: #ffff00;">繪製零件</span></p>
-<p><strong><span style="background-color: #ffffff;"></span></strong></p>
+<p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape畫出並組合。</span></p>
+<p><span style="background-color: #ffff00;">熟悉CoppeliaSim</span></p>
+<p><span style="background-color: #ffffff;">做一個基本四輪車並以鍵盤控制四輪車</span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EXIWTk8ZhUU" width="560"></iframe></span></p>
+<p>遇到的問題 : </p>
+<p>1.車子跑得很慢 (已解決，增加Target velocity的大小)</p>
+<p>2.程式碼代入車子本身後跑不動 (已解決，在更改馬達名字時打錯)</p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <h3><span style="background-color: #ccffff;">Week3</span></h3>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week5~9</span></span></h2>
 <p><span style="background-color: #ccffff;">Week5</span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
+<h1><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Experience</span></span></h1>
+<p><span style="background-color: #ccffff;">Week1</span></p>
+<p><span style="background-color: #ccffff;">Week2</span></p>
+<p><span style="background-color: #ccffff;">Week3</span></p>
+<p><span style="background-color: #ccffff;">Week4</span></p>
+<p><span style="background-color: #ccffff;">Week5</span></p>
+<p><span style="background-color: #ccffff;">Week6</span></p>
+<p><span style="background-color: #ccffff;">Week7</span></p>
+<p><span style="background-color: #ccffff;">Week8</span></p>
