--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -14,22 +14,46 @@
 <h6><span style="background-color: #ccffff;">Week1</span></h6>
 <p><span style="background-color: #ffff00;">建立個人倉儲cd2021</span></p>
 <p>1.下載kmol2021_spring_v2.7z，完成後開啟。</p>
-<p>2.登入個人github帳號，創建新的倉儲cd2021。</p>
+<p>2.登入個人github帳號，使用老師的子模組創建新的倉儲cd2021。</p>
 <p>3.進入tmp。</p>
 <p>4.輸入git clone --recurse-submodules https://github.com/40623121/cd2021.git 取得子模組資料。</p>
 <p>5.完成後，進入cmsimde資料夾輸入python wsgi.py開始編輯倉儲。</p>
 <p>6.於瀏覽器輸入https://localhost:9443/</p>
 <p>7.<span>編輯完成後，輸入git status檢查</span><span><span> </span>-&gt;</span><span> </span><span>git add .全部新增</span><span><span> </span>-&gt;</span><span> </span><span>git commit -m "項目名稱"</span><span><span> </span>-&gt;</span><span> </span><span>git push推送。   </span></p>
 <p><span></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ExYwraaMq1Y" width="560"></iframe></span></p>
+<p><span></span></p>
 <p><span style="background-color: #ffff00;">從英文單字解釋了解何謂協同? 產品? 設計? 以及實習?</span></p>
+<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ffcc99;">Collaborative 協同</span></p>
+<p><span style="background-color: #ffffff;">涉及兩個或多個為特殊目的而一起工作的人。</span></p>
+<p><span style="background-color: #ffcc99;"><span>Product  產品</span></span></p>
+<p>為出售而製造或精製的物品或物質。</p>
+<p><span style="background-color: #ffcc99;"><span>Design 設計</span></span></p>
+<p><span style="background-color: #ffffff;">為某物制定或繪製計畫。</span></p>
+<p><span style="background-color: #ffcc99;"><span>Practice 練習</span></span></p>
+<p><span style="background-color: #ffffff;">實際去行動而不是單純去想或觀念。</span></p>
+<p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffff00;">建立.leoID.txt</span></p>
 <p><span style="background-color: #ffffff;">針對 Leo Editor 6.3 在 Windows 10 無法正確建立 home/.leo/.leoID.txt，且打開leo會產生一個無限迴圈，所以要在home_ipv6創建一個.leo資料夾，並新增一個有隨意字串的.leoID.txt檔。</span></p>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8iijGtvwqa8" width="560"></iframe></span></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffff00;">編輯 Leo Editor</span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week2~4</span></span></h2>
-<p><span style="background-color: #ccffff;">Week2</span></p>
+<h3><span style="background-color: #ccffff;">Week2</span></h3>
+<p><strong><span style="background-color: #ffffff;">第一階段分組協同實習</span></strong></p>
+<p><span style="background-color: #ffff00;">制定組序</span></p>
+<p><span style="background-color: #ffffff;">動機 : <span>進行各班制定組序過程中, 發現即便採用 Ethercalc 以網際協同方式同步讓各班自選組員填入兩兩成組的學員學號, 但仍缺人工或自動定各班組序的有效方案，所以要說明自己認為最有效率的第一階段與訂定組序的方法及流程。</span></span></p>
+<p>使用程式碼 : </p>
+<p>人工 : 在教室前面的其中一台電腦做一個excel表單，並派班代負責key資料，找好組員的人派其中一個代表去報學號，key完後依序排組序下來，這樣不僅不會出錯，組序也不會亂掉。</p>
+<p><span style="background-color: #ffff00;">繪製零件</span></p>
+<p><strong><span style="background-color: #ffffff;"></span></strong></p>
+<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ccffff;"></span></p>
+<h3><span style="background-color: #ccffff;">Week3</span></h3>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week5~9</span></span></h2>
 <p><span style="background-color: #ccffff;">Week5</span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
