--- a/content/Experience.html
+++ b/content/Experience.html
@@ -133,12 +133,15 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>Weeks</h1>
-<p><a href="https://40623121.github.io/cd2021/content/Week1.html">Week1</a></p>
-<p><a href="https://40623121.github.io/cd2021/content/Week2~4.html">Week2~4</a></p>
-<p><a href="https://40623121.github.io/cd2021/content/Week5~9.html">Week5~9</a></p>
-<p><a href="https://40623121.github.io/cd2021/content/Week10~18.html">Week10~18</a></p>
-<br />About << <a href='About.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</div>
+    <div id="tipue_search_content">Week10~18 << <a href='Week10~18.html'>Previous</a> <br /><h1>Experience</h1>
+<p><span style="background-color: #ccffff;">Week1</span></p>
+<p><span style="background-color: #ccffff;">Week2</span></p>
+<p><span style="background-color: #ccffff;">Week3</span></p>
+<p><span style="background-color: #ccffff;">Week4</span></p>
+<p><span style="background-color: #ccffff;">Week5</span></p>
+<p><span style="background-color: #ccffff;">Week6</span></p>
+<p><span style="background-color: #ccffff;">Week7</span></p>
+<p><span style="background-color: #ccffff;">Week8</span></p><br />Week10~18 << <a href='Week10~18.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
