--- a/content/Week2.html
+++ b/content/Week2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -140,7 +140,13 @@ img.add_border {
 <p>使用程式碼 : </p>
 <p>人工 : 在教室前面的其中一台電腦做一個excel表單，並派班代負責key資料，找好組員的人派其中一個代表去報學號，key完後依序排組序下來，這樣不僅不會出錯，組序也不會亂掉。</p>
 <p><span style="background-color: #ffff00;">繪製零件</span></p>
-<p><strong><span style="background-color: #ffffff;"></span></strong></p>
+<p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape畫出並組合。</span></p>
+<p><span style="background-color: #ffff00;">熟悉CoppeliaSim</span></p>
+<p><span style="background-color: #ffffff;">做一個基本四輪車並以鍵盤控制四輪車</span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EXIWTk8ZhUU" width="560"></iframe></span></p>
+<p>遇到的問題 : </p>
+<p>1.車子跑得很慢 (已解決，增加Target velocity的大小)</p>
+<p>2.程式碼代入車子本身後跑不動 (已解決，在更改馬達名字時打錯)</p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <br />Week2~4 << <a href='Week2~4.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3</div>
