--- a/config/content.htm
+++ b/config/content.htm
@@ -34,15 +34,21 @@
 <p><span style="background-color: #ffffff;">為某物制定或繪製計畫。</span></p>
 <p><span style="background-color: #ffcc99;"><span>Practice 練習</span></span></p>
 <p><span style="background-color: #ffffff;">實際去行動而不是單純去想或觀念。</span></p>
-<p><span style="background-color: #ffff00;"></span></p>
-<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ffff00;"> </span></p>
+<p><span style="background-color: #ffff00;">編輯 Leo Editor</span></p>
+<p><span style="background-color: #ffffff;">1.於Y槽中輸入leo</span></p>
+<p><span style="background-color: #ffffff;">2.若不想為黑色，打開pelican.leo</span></p>
+<p><span style="background-color: #ffffff;">3.要更改blog內容使用pelican.leo，要更改簡報內容使用reveal.leo</span></p>
+<p><span style="background-color: #ffffff;">4.要創建同一格的目錄按Ctrl+I，向右移按Ctrl+R</span></p>
+<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lezt6sojJPs" width="560"></iframe></span></p>
+<p>遇到的問題 : </p>
+<p>1.有在leo editer更改，但是推送完遠端並沒有改變(已解決，沒有更改DISQUS_SITENAME及SITEURL)</p>
+<p>2.打開leo時進入一個無限迴圈(已解決，建立一個.leoID字串)</p>
+<p></p>
 <p><span style="background-color: #ffff00;">建立.leoID.txt</span></p>
 <p><span style="background-color: #ffffff;">針對 Leo Editor 6.3 在 Windows 10 無法正確建立 home/.leo/.leoID.txt，且打開leo會產生一個無限迴圈，所以要在home_ipv6創建一個.leo資料夾，並新增一個有隨意字串的.leoID.txt檔。</span></p>
-<p><span style="background-color: #ffffff;"></span></p>
-<p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8iijGtvwqa8" width="560"></iframe></span></p>
-<p><span style="background-color: #ffff00;"></span></p>
-<p><span style="background-color: #ffff00;"></span></p>
-<p><span style="background-color: #ffff00;">編輯 Leo Editor</span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/8iijGtvwqa8" width="560"></iframe></p>
+<p></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week2~4</span></span></h2>
 <h3><span style="background-color: #ccffff;">Week2</span></h3>
 <p><strong><span style="background-color: #ffffff;">第一階段分組協同實習</span></strong></p>
