--- a/config/content.htm
+++ b/config/content.htm
@@ -34,7 +34,7 @@
 <p><span style="background-color: #ffffff;">為某物制定或繪製計畫。</span></p>
 <p><span style="background-color: #ffcc99;"><span>Practice 練習</span></span></p>
 <p><span style="background-color: #ffffff;">實際去行動而不是單純去想或觀念。</span></p>
-<p><span style="background-color: #ffff00;"> </span></p>
+<p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffff00;">編輯 Leo Editor</span></p>
 <p><span style="background-color: #ffffff;">1.於Y槽中輸入leo</span></p>
 <p><span style="background-color: #ffffff;">2.若不想為黑色，打開pelican.leo</span></p>
@@ -57,7 +57,7 @@
 <p>使用程式碼 : </p>
 <p>人工 : 在教室前面的其中一台電腦做一個excel表單，並派班代負責key資料，找好組員的人派其中一個代表去報學號，key完後依序排組序下來，這樣不僅不會出錯，組序也不會亂掉。</p>
 <p><span style="background-color: #ffff00;">繪製零件</span></p>
-<p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape畫出並組合。</span></p>
+<p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape&amp;Inventor畫出並組合。</span></p>
 <p><span style="background-color: #ffff00;">熟悉CoppeliaSim</span></p>
 <p><span style="background-color: #ffffff;">做一個基本四輪車並以鍵盤控制四輪車</span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EXIWTk8ZhUU" width="560"></iframe></span></p>
@@ -67,6 +67,26 @@
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <h3><span style="background-color: #ccffff;">Week3</span></h3>
+<p><span style="background-color: #ccffff;"></span></p>
+<p><span style="background-color: #ffff00;">製作分組專題</span></p>
+<p><span style="background-color: #ffffff;">標題 : 2021-協同產品實習-<span>stage1-ag2</span><br/><span>專題題目 : 飛機起降</span><br/><span>動機 : 對設計路徑類的東西有興趣</span></span></p>
+<p><span style="background-color: #ffffff;"><span>網站 : <a href="https://40623121.github.io/stage1-ag2/content/index.html">分組網站</a></span></span></p>
+<p><span style="background-color: #ffffff;"><span></span></span></p>
+<p><span style="background-color: #ffff00;">加入檔案</span></p>
+<ol>
+<li><span>init.py : </span>其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號</li>
+<li><span>http-server.py : </span>執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁</li>
+<li><span>cms.bat</span><span> :</span> 讓使用者執行動態網站用的批次檔案</li>
+<li><span>acp.bat</span><span> :</span> 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令</li>
+</ol>
+<p><span style="background-color: #ffff00;">以ssh對Github連線</span></p>
+<p><span style="background-color: #ffffff;">操作步驟 : </span></p>
+<p><span style="background-color: #ffffff;"><br/><span>2.輸入sh及ssh-keygen -t rsa -b 4096 -C "使學號"產生key，打上key的產生區域。</span><br/><span>3.利用 puttygen.exe 將上述建立的 Openssh keys 轉為 putty 可以辨識的格式。</span><br/><span>4.修改啟動的 start.bat 加入下列設定:</span><br/><span>       set GIT_HOME=%Disk%:\portablegit\bin\</span><br/><span>       set GIT_SSH=%Disk%:\putty\plink.exe</span><br/><span>修改完成後,重新啟動。</span><br/><span>5.將要使用 ssh 連線的倉儲 .git 中的 config 檔案中的 url 設定改為 ssh 連線格式:url = git@github.com:倉儲名稱/cad2019.git。</span><br/><span>6.開啟 putty.exe 建立一個 session 名稱為 github.com, 其中指定 Connection &gt; Proxy 與 Connection &gt; SSH &gt; Auth。</span><br/><span>7.將下列字串加入編輯器並存儲到y:\home\.ssh\config:</span><br/><span>Host github.com</span><br/><span>    User git</span><br/><span>    Port 22</span><br/><span>    Hostname github.com</span><br/><br/><span>    TCPKeepAlive yes</span><br/><span>    IdentitiesOnly yes</span><br/><span>8.將所建立的OpenSSH格式的public key內容,送到Github帳號SSH settings中。</span><br/><br/></span></p>
+<p><span style="background-color: #ffffff;">遇到的問題 :</span></p>
+<p><span style="background-color: #ffffff;">1.putty顯示Network error: Connection refused</span></p>
+<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ccffff;">Week4</span></p>
+<p><span style="background-color: #ffffff;"><span></span></span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week5~9</span></span></h2>
 <p><span style="background-color: #ccffff;">Week5</span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
