--- a/content/Week1.html
+++ b/content/Week1.html
@@ -156,7 +156,7 @@ img.add_border {
 <p><span style="background-color: #ffffff;">為某物制定或繪製計畫。</span></p>
 <p><span style="background-color: #ffcc99;"><span>Practice 練習</span></span></p>
 <p><span style="background-color: #ffffff;">實際去行動而不是單純去想或觀念。</span></p>
-<p><span style="background-color: #ffff00;"> </span></p>
+<p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffff00;">編輯 Leo Editor</span></p>
 <p><span style="background-color: #ffffff;">1.於Y槽中輸入leo</span></p>
 <p><span style="background-color: #ffffff;">2.若不想為黑色，打開pelican.leo</span></p>
