--- a/content/Week2.html
+++ b/content/Week2.html
@@ -140,7 +140,7 @@ img.add_border {
 <p>使用程式碼 : </p>
 <p>人工 : 在教室前面的其中一台電腦做一個excel表單，並派班代負責key資料，找好組員的人派其中一個代表去報學號，key完後依序排組序下來，這樣不僅不會出錯，組序也不會亂掉。</p>
 <p><span style="background-color: #ffff00;">繪製零件</span></p>
-<p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape畫出並組合。</span></p>
+<p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape&amp;Inventor畫出並組合。</span></p>
 <p><span style="background-color: #ffff00;">熟悉CoppeliaSim</span></p>
 <p><span style="background-color: #ffffff;">做一個基本四輪車並以鍵盤控制四輪車</span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EXIWTk8ZhUU" width="560"></iframe></span></p>
