--- a/content/Week5.html
+++ b/content/Week5.html
@@ -133,23 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week10~18 << <a href='Week10~18.html'>Previous</a> <br /><h1>Experience</h1>
-<p><span style="background-color: #ccffff;">Week1</span></p>
-<p><span style="background-color: #ffffff;">開始了協同產品設計的第一週，說起來也慚愧，畢竟是之前太混什麼都沒學到才被當的，這學期會認真學習的。</span></p>
-<p><span style="background-color: #ffffff;">一開始一如往常地建立個人倉儲，這次不一樣的事是直接使用現成的子模組，比起以前方扁許多，然後薛席從英文單字了解其中的意義，像collaborative,product,design等等，最後就是編輯自己的leo editer，雖然有點落後進度不過會努力跟上的。</span></p>
-<p><span style="background-color: #ffffff;"></span></p>
-<p><span style="background-color: #ccffff;">Week2</span></p>
-<p><span style="background-color: #ffffff;">跟以前不一樣的是，這次分組不再是使用亂數分組，而是使用Ethercalc的協同同步方式，我覺得是很有效率的方法，不過也出現了些小問題。</span></p>
-<p><span style="background-color: #ffffff;">然後就是開始著手製作第一次的專題題目，但本身對coppeliasim不熟，所以還需要些時間摸索。</span></p>
-<p><span style="background-color: #ccffff;"></span></p>
-<p><span style="background-color: #ccffff;">Week3</span></p>
-<p><span style="background-color: #ffffff;">這週都在繪製零件跟操作coppeliasim，還有建立ssh對自己的github連線，我覺得要理解ssh蠻難的，不過還是有順利連線，上課中還有遇到個問題就是，分組網站不是建立在組長下面，所以就學習了如何使用git remote add並推送至各自的倉儲下，回家後就繼續測試並且製作下週報告要用的html與pdf。</span></p>
-<p><span style="background-color: #ccffff;"></span></p>
-<p><span style="background-color: #ccffff;">Week4</span></p>
-<p><span style="background-color: #ccffff;">Week5</span></p>
-<p><span style="background-color: #ccffff;">Week6</span></p>
-<p><span style="background-color: #ccffff;">Week7</span></p>
-<p><span style="background-color: #ccffff;">Week8</span></p><br />Week10~18 << <a href='Week10~18.html'>Previous</a> </div>
+    <div id="tipue_search_content">Week5~9 << <a href='Week5~9.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18<br /><h1>Week5</h1>
+<br />Week5~9 << <a href='Week5~9.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18</div>
         
     <!-- footer -->
       <div class="container">
