--- a/content/Week2.html
+++ b/content/Week2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -139,8 +139,10 @@ img.add_border {
 <p><span style="background-color: #ffffff;">動機 : <span>進行各班制定組序過程中, 發現即便採用 Ethercalc 以網際協同方式同步讓各班自選組員填入兩兩成組的學員學號, 但仍缺人工或自動定各班組序的有效方案，所以要說明自己認為最有效率的第一階段與訂定組序的方法及流程。</span></span></p>
 <p>使用程式碼 : </p>
 <p>人工 : 在教室前面的其中一台電腦做一個excel表單，並派班代負責key資料，找好組員的人派其中一個代表去報學號，key完後依序排組序下來，這樣不僅不會出錯，組序也不會亂掉。</p>
+<p></p>
 <p><span style="background-color: #ffff00;">繪製零件</span></p>
 <p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape&amp;Inventor畫出並組合。</span></p>
+<p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffff00;">熟悉CoppeliaSim</span></p>
 <p><span style="background-color: #ffffff;">做一個基本四輪車並以鍵盤控制四輪車</span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EXIWTk8ZhUU" width="560"></iframe></span></p>
