--- a/content/Week5~9.html
+++ b/content/Week5~9.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Week5~9.html'>Week5~9</a><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week3 << <a href='Week3.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18<br /><h1>Week5~9</h1>
-<p><span style="background-color: #ccffff;">Week5</span></p>
-<br />Week3 << <a href='Week3.html'>Previous</a> <a href='Week10~18.html'>Next</a> >> Week10~18</div>
+    <div id="tipue_search_content">Week4 << <a href='Week4.html'>Previous</a> <a href='Week5.html'>Next</a> >> Week5<br /><h1>Week5~9</h1>
+<br />Week4 << <a href='Week4.html'>Previous</a> <a href='Week5.html'>Next</a> >> Week5</div>
         
     <!-- footer -->
       <div class="container">
