--- a/content/Experience.html
+++ b/content/Experience.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -146,6 +146,7 @@ img.add_border {
 <p><span style="background-color: #ffffff;">這週都在繪製零件跟操作coppeliasim，還有建立ssh對自己的github連線，我覺得要理解ssh蠻難的，不過還是有順利連線，上課中還有遇到個問題就是，分組網站不是建立在組長下面，所以就學習了如何使用git remote add並推送至各自的倉儲下，回家後就繼續測試並且製作下週報告要用的html與pdf。</span></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <p><span style="background-color: #ccffff;">Week4</span></p>
+<p><span style="background-color: #ffffff;">如果只是單純的直線路徑並不是一個好的作品，要加入考量迴轉半徑、離心力、輪子收縮、物體加入質量、需要多大馬力起飛、加入感測器等等各種參數，當初選定題目時沒有考量那麼多，還有要有設計流程圖，很多問題都是當初沒有想到的，幸虧有老師的點醒。</span></p>
 <p><span style="background-color: #ccffff;">Week5</span></p>
 <p><span style="background-color: #ccffff;">Week6</span></p>
 <p><span style="background-color: #ccffff;">Week7</span></p>
