--- a/content/Week1.html
+++ b/content/Week1.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -164,7 +164,7 @@ img.add_border {
 <p><span style="background-color: #ffffff;">3.要更改blog內容使用pelican.leo，要更改簡報內容使用reveal.leo</span></p>
 <p><span style="background-color: #ffffff;">4.要創建同一格的目錄按Ctrl+I，向右移按Ctrl+R</span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lezt6sojJPs" width="560"></iframe></span></p>
-<p>遇到的問題 : </p>
+<p><strong><span style="background-color: #ff0000;">遇到的問題</span></strong> : </p>
 <p>1.有在leo editer更改，但是推送完遠端並沒有改變(已解決，沒有更改DISQUS_SITENAME及SITEURL)</p>
 <p>2.打開leo時進入一個無限迴圈(已解決，建立一個.leoID字串)</p>
 <p></p>
