--- a/content/Week4.html
+++ b/content/Week4.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,6 +134,15 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week3 << <a href='Week3.html'>Previous</a> <a href='Week5~9.html'>Next</a> >> Week5~9<br /><h1>Week4</h1>
+<p><span style="background-color: #ffff00;"><strong>報 告 週</strong></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">youtube : </span><strong><br/></strong></span></p>
+<p><span style="background-color: #ffff00;"><strong><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_-JiJvMBtiA" width="560"></iframe></span></strong></span></p>
+<p>PDF : </p>
+<p><a href="./../downloads/2021-協同產品設計實習-stage1-ag2.pdf">pdf</a></p>
+<p></p>
+<p><span style="background-color: #ffff00;">文獻探討</span></p>
+<p><span style="background-color: #ffff00;">分組題目的選定</span></p>
+<p><span style="background-color: #ffffff;">準備開始 W5-W9 (5 Weeks) 四人一組的分組專題。</span></p>
 <p><span style="background-color: #ffffff;"><span></span></span></p>
 <br />Week3 << <a href='Week3.html'>Previous</a> <a href='Week5~9.html'>Next</a> >> Week5~9</div>
         
