--- a/config/content.htm
+++ b/config/content.htm
@@ -4,8 +4,8 @@
 <p><a href="https://40623121.github.io/cd2021/content/index.html">個人網站</a></p>
 <p><a href="https://40623121.github.io/cd2021/reveal/index.html">個人簡報</a></p>
 <p><a href="https://40623121.github.io/cd2021/blog/index.html">個人網誌</a></p>
-<p><a href="https://40623121.github.io/stage1-ag2/content/index.html">分組網站</a></p>
-<p>組員 : <a href="https://github.com/40523252/cd2021">40523252</a></p>
+<p><a href="https://40623121.github.io/stage1-ag2/content/index.html">分組網站</a>1</p>
+<p></p>
 <h1>Weeks</h1>
 <p><a href="https://40623121.github.io/cd2021/content/Week1.html">Week1</a></p>
 <p><a href="https://40623121.github.io/cd2021/content/Week2~4.html">Week2~4</a></p>
@@ -42,7 +42,7 @@
 <p><span style="background-color: #ffffff;">3.要更改blog內容使用pelican.leo，要更改簡報內容使用reveal.leo</span></p>
 <p><span style="background-color: #ffffff;">4.要創建同一格的目錄按Ctrl+I，向右移按Ctrl+R</span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lezt6sojJPs" width="560"></iframe></span></p>
-<p>遇到的問題 : </p>
+<p><strong><span style="background-color: #ff0000;">遇到的問題</span></strong> : </p>
 <p>1.有在leo editer更改，但是推送完遠端並沒有改變(已解決，沒有更改DISQUS_SITENAME及SITEURL)</p>
 <p>2.打開leo時進入一個無限迴圈(已解決，建立一個.leoID字串)</p>
 <p></p>
@@ -55,16 +55,17 @@
 <p><strong><span style="background-color: #ffffff;">第一階段分組協同實習</span></strong></p>
 <p><span style="background-color: #ffff00;">制定組序</span></p>
 <p><span style="background-color: #ffffff;">動機 : <span>進行各班制定組序過程中, 發現即便採用 Ethercalc 以網際協同方式同步讓各班自選組員填入兩兩成組的學員學號, 但仍缺人工或自動定各班組序的有效方案，所以要說明自己認為最有效率的第一階段與訂定組序的方法及流程。</span></span></p>
-<p>使用程式碼 : </p>
 <p>人工 : 在教室前面的其中一台電腦做一個excel表單，並派班代負責key資料，找好組員的人派其中一個代表去報學號，key完後依序排組序下來，這樣不僅不會出錯，組序也不會亂掉。</p>
 <p></p>
 <p><span style="background-color: #ffff00;">繪製零件</span></p>
 <p><span style="background-color: #ffffff;">先在A4白紙設計各個零件尺寸，使用Onshape&amp;Inventor畫出並組合。</span></p>
 <p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffffff;"><img alt="" height="401" src="/images/組合.png" width="672"/></span></p>
+<p><span style="background-color: #ffffff;"></span></p>
 <p><span style="background-color: #ffff00;">熟悉CoppeliaSim</span></p>
 <p><span style="background-color: #ffffff;">做一個基本四輪車並以鍵盤控制四輪車</span></p>
 <p><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/EXIWTk8ZhUU" width="560"></iframe></span></p>
-<p>遇到的問題 : </p>
+<p><span style="background-color: #ff0000;"><strong>遇到的問題</strong></span> : </p>
 <p>1.車子跑得很慢 (已解決，增加Target velocity的大小)</p>
 <p>2.程式碼代入車子本身後跑不動 (已解決，在更改馬達名字時打錯)</p>
 <p><span style="background-color: #ffff00;"></span></p>
@@ -77,33 +78,57 @@
 <p><span style="background-color: #ffffff;"><span></span></span></p>
 <p><span style="background-color: #ffff00;">分組協同網站同步</span></p>
 <p><span style="background-color: #ffff00;"></span></p>
-<p><span style="background-color: #ffffff;"><span>當 stage1 兩人一組進行協同時, 要讓各組員 Github 帳號下都帶有分組倉儲與分組網站, 則可以透過 git remote add, 設法讓各組員 Github 帳號下的分組網站內容同步</span></span></p>
+<p><span style="background-color: #ffffff;"><span>當 stage1 兩人一組進行協同時, 要讓各組員 Github 帳號下都帶有分組倉儲與分組網站, 則可以透過 git remote add, 設法讓各組員 Github 帳號下的分組網站內容同步。</span></span></p>
 <p>操作步驟 : </p>
 <p>1.另一個組員設立一個沒有東西的倉儲(名字需要一樣)</p>
 <p>2.取得子模組資料後，輸入git remote add xxx <a href="/">https://github.com/另一個組員學號/倉儲名稱.git</a></p>
 <p>3.從另一個組員的setting寄從另一個組員的setting &gt; Manage access寄邀請給自己</p>
 <p><span style="background-color: #ffffff;"><span></span></span>4.git push xxx，即完成。</p>
 <p></p>
-<p>遇到的問題 : 推送後顯示 remote: Permission (已解決，尚未從gmail確認對方的invite)</p>
+<p><strong><span style="background-color: #ff0000;">遇到的問題</span></strong> :</p>
+<p>1.推送後顯示 remote: Permission (已解決，尚未從gmail確認對方的invite)</p>
 <p></p>
 <p></p>
 <p><span style="background-color: #ffff00;">update cmsimde</span></p>
+<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ffff00;"><img alt="" height="91" src="/images/4.png" width="171"/></span></p>
 <p>1.<span>init.py : </span>其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號</p>
 <p>2.<span>http-server.py : </span>執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁</p>
 <p>3.<span>cms.bat</span><span> :</span> 讓使用者執行動態網站用的批次檔案</p>
-<p>4.<span>acp.bat</span><span> :</span> 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令</p>
+<p>4.<span>acp.bat</span><span> :</span> 如果已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 就可以使用<strong>acp "字串"</strong>代替執行 git add ., git commit -m "提交訊息", 以及 git push 三個指令。</p>
+<p></p>
+<p></p>
+<p><span style="background-color: #ff0000;"><strong>遇到的問題</strong></span> : </p>
+<p>1.推送後遠端沒有推送成功，且gmail顯示Page build failure(已解決，cmsimde錯誤，在cmsimde目錄下輸入git checkout 9c9d8e9即可。)</p>
+<p>2.wsgi.py打不開，顯示context.load_cert_chain('localhost.crt' . 'localhost.key')(已解決，將倉儲的兩個對應檔案複製進cmsimde目錄下即可。)</p>
+<p></p>
 <p></p>
 <p><span style="background-color: #ffff00;">以ssh對Github連線</span></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffffff;">操作步驟 : </span></p>
-<p><span style="background-color: #ffffff;">1.打開start_ipv6.bat<br/><span>2.輸入sh及ssh-keygen -t rsa -b 4096 -C "使學號"產生key，打上key的產生區域。</span><br/><span>3.利用 puttygen.exe 將上述建立的 Openssh keys 轉為 putty 可以辨識的格式。</span><br/><span>4.修改啟動的 start.bat 加入下列設定:</span><br/><span>       set GIT_HOME=%Disk%:\portablegit\bin\</span><br/><span>       set GIT_SSH=%Disk%:\putty\plink.exe</span><br/><span>修改完成後,重新啟動。</span><br/><span>5.將要使用 ssh 連線的倉儲 .git 中的 config 檔案中的 url 設定改為 ssh 連線格式:url = git@github.com:倉儲名稱/cad2019.git。</span><br/><span>6.開啟 putty.exe 建立一個 session 名稱為 github.com, 其中指定 Connection &gt; Proxy 與 Connection &gt; SSH &gt; Auth。</span><br/><span>7.將下列字串加入SciTE並存儲到\.ssh\config</span><br/><span>Host github.com</span><br/><span>    User git</span><br/><span>    Port 22</span><br/><span>    Hostname github.com</span><br/><br/><span>    TCPKeepAlive yes</span><br/><span>    IdentitiesOnly yes</span><br/><span>8.將所建立的OpenSSH格式的public key內容,送到Github帳號SSH settings中。</span><br/><br/></span></p>
-<p><span style="background-color: #ffffff;">遇到的問題 :</span></p>
+<p><span style="background-color: #ffffff;">1.打開start_ipv6.bat<br/><span>2.輸入sh及ssh-keygen -t rsa -b 4096 -C "使學號"產生key，打上key的產生區域。</span><br/><span>3.利用 puttygen.exe 將上述建立的 Openssh keys 轉為 putty 可以辨識的格式。</span><br/><span>4.修改啟動的 start.bat 加入下列設定:</span><br/><span>       set GIT_HOME=%Disk%:\portablegit\bin\</span><br/><span>       set GIT_SSH=%Disk%:\putty\plink.exe</span><br/><span>修改完成後,重新啟動。</span><br/><span>5.將要使用 ssh 連線的倉儲 .git 中的 config 檔案中的 url 設定改為 ssh 連線格式:url = git@github.com:倉儲名稱/cad2019.git。</span><br/><span>6.開啟 putty.exe 建立一個 session 名稱為 github.com, 其中指定 Connection &gt; Proxy 與 Connection &gt; SSH &gt; Auth。</span><br/><span>7.將下列字串加入SciTE並存儲到\.ssh\config</span><br/><span>Host github.com</span><br/><span>    User git</span><br/><span>    Port 22</span><br/><span>    Hostname github.com</span><br/><br/><span>    TCPKeepAlive yes</span><br/><span>    IdentitiesOnly yes</span><br/><span>8.將所建立的OpenSSH格式的public key內容,加進自己的Github帳號SSH settings中。</span><br/><br/></span></p>
+<p><span style="background-color: #ffffff;"><span style="background-color: #ff0000;">遇到的問題</span> :</span></p>
 <p><span style="background-color: #ffffff;">1.putty顯示Network error: Connection refused(已解決，proxy設定錯誤)</span></p>
 <p><span style="background-color: #ffffff;"></span></p>
 <h3><span style="background-color: #ccffff;">Week4</span></h3>
+<p><span style="background-color: #ffff00;"><strong>報 告 週</strong></span></p>
+<p><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">youtube : </span><strong><br/></strong></span></p>
+<p><span style="background-color: #ffff00;"><strong><span style="background-color: #ffffff;"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_-JiJvMBtiA" width="560"></iframe></span></strong></span></p>
+<p>PDF : </p>
+<p><a href="/downloads/2021-協同產品設計實習-stage1-ag2.pdf">pdf</a></p>
+<p></p>
+<p><span style="background-color: #ffff00;">文獻探討</span></p>
+<p><span style="background-color: #ffff00;">分組題目的選定</span></p>
+<p><span style="background-color: #ffffff;">準備開始 W5-W9 (5 Weeks) 四人一組的分組專題。</span></p>
 <p><span style="background-color: #ffffff;"><span></span></span></p>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week5~9</span></span></h2>
 <h3><span style="background-color: #ccffff;">Week5</span></h3>
+<p><span style="background-color: #ffff00;">排序各組簡報檔案</span></p>
+<p><span style="background-color: #ffffff;">python count mp4 time</span></p>
+<h3><span style="background-color: #ccffff;">Week6</span></h3>
+<h3><span style="background-color: #ccffff;">Week7</span></h3>
+<h3><span style="background-color: #ccffff;">Week8</span></h3>
+<h3><span style="background-color: #ccffff;">Week9</span></h3>
 <h2><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Week10~18</span></span></h2>
 <h1><span style="background-color: #ffff00;"><span style="background-color: #ffffff;">Experience</span></span></h1>
 <p><span style="background-color: #ccffff;">Week1</span></p>
@@ -118,6 +143,7 @@
 <p><span style="background-color: #ffffff;">這週都在繪製零件跟操作coppeliasim，還有建立ssh對自己的github連線，我覺得要理解ssh蠻難的，不過還是有順利連線，上課中還有遇到個問題就是，分組網站不是建立在組長下面，所以就學習了如何使用git remote add並推送至各自的倉儲下，回家後就繼續測試並且製作下週報告要用的html與pdf。</span></p>
 <p><span style="background-color: #ccffff;"></span></p>
 <p><span style="background-color: #ccffff;">Week4</span></p>
+<p><span style="background-color: #ffffff;">如果只是單純的直線路徑並不是一個好的作品，要加入考量迴轉半徑、離心力、輪子收縮、物體加入質量、需要多大馬力起飛、加入感測器等等各種參數，當初選定題目時沒有考量那麼多，還有要有設計流程圖，很多問題都是當初沒有想到的，幸虧有老師的點醒。</span></p>
 <p><span style="background-color: #ccffff;">Week5</span></p>
 <p><span style="background-color: #ccffff;">Week6</span></p>
 <p><span style="background-color: #ccffff;">Week7</span></p>
