--- a/content/Week3.html
+++ b/content/Week3.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Weeks.html'>Weeks</a><ul class='dropdown'><li><a href='Week1.html'>Week1</a><li class='has-children'><a href='Week2~4.html'>Week2~4</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li class='has-children'><a href='Week5~9.html'>Week5~9</a><ul class='dropdown'><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='Week10~18.html'>Week10~18</a></li></ul><li><a href='Experience.html'>Experience</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,27 +141,36 @@ img.add_border {
 <p><span style="background-color: #ffffff;"><span></span></span></p>
 <p><span style="background-color: #ffff00;">分組協同網站同步</span></p>
 <p><span style="background-color: #ffff00;"></span></p>
-<p><span style="background-color: #ffffff;"><span>當 stage1 兩人一組進行協同時, 要讓各組員 Github 帳號下都帶有分組倉儲與分組網站, 則可以透過 git remote add, 設法讓各組員 Github 帳號下的分組網站內容同步</span></span></p>
+<p><span style="background-color: #ffffff;"><span>當 stage1 兩人一組進行協同時, 要讓各組員 Github 帳號下都帶有分組倉儲與分組網站, 則可以透過 git remote add, 設法讓各組員 Github 帳號下的分組網站內容同步。</span></span></p>
 <p>操作步驟 : </p>
 <p>1.另一個組員設立一個沒有東西的倉儲(名字需要一樣)</p>
 <p>2.取得子模組資料後，輸入git remote add xxx <a href="/">https://github.com/另一個組員學號/倉儲名稱.git</a></p>
 <p>3.從另一個組員的setting寄從另一個組員的setting &gt; Manage access寄邀請給自己</p>
 <p><span style="background-color: #ffffff;"><span></span></span>4.git push xxx，即完成。</p>
 <p></p>
-<p>遇到的問題 : 推送後顯示 remote: Permission (已解決，尚未從gmail確認對方的invite)</p>
+<p><strong><span style="background-color: #ff0000;">遇到的問題</span></strong> :</p>
+<p>1.推送後顯示 remote: Permission (已解決，尚未從gmail確認對方的invite)</p>
 <p></p>
 <p></p>
 <p><span style="background-color: #ffff00;">update cmsimde</span></p>
+<p><span style="background-color: #ffff00;"></span></p>
+<p><span style="background-color: #ffff00;"><img alt="" height="91" src="./../images/4.png" width="171"/></span></p>
 <p>1.<span>init.py : </span>其中的 site_title, ip 與 port 可以讓使用者自行修改, site_title 是網站標題, ip 為動態網站啟動時所使用的網路位址, 可設為內部或外部 IPv4 (IPv6), port 則是動態網站啟動時所佔用的埠號</p>
 <p>2.<span>http-server.py : </span>執行後會使用內建的 localhost 與 port 8444 伺服 content 子目錄中的 CMSiMDE 靜態網頁</p>
 <p>3.<span>cms.bat</span><span> :</span> 讓使用者執行動態網站用的批次檔案</p>
-<p>4.<span>acp.bat</span><span> :</span> 若使用者已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 則可以在執行此批次指令之後加上提交字串, 即可執行 git add ., git commit -m "提交訊息", 以及 git push 等三個指令</p>
+<p>4.<span>acp.bat</span><span> :</span> 如果已經將倉儲設為 ssh 連線, 且提供遠端與近端的認證模式, 就可以使用<strong>acp "字串"</strong>代替執行 git add ., git commit -m "提交訊息", 以及 git push 三個指令。</p>
+<p></p>
+<p></p>
+<p><span style="background-color: #ff0000;"><strong>遇到的問題</strong></span> : </p>
+<p>1.推送後遠端沒有推送成功，且gmail顯示Page build failure(已解決，cmsimde錯誤，在cmsimde目錄下輸入git checkout 9c9d8e9即可。)</p>
+<p>2.wsgi.py打不開，顯示context.load_cert_chain('localhost.crt' . 'localhost.key')(已解決，將倉儲的兩個對應檔案複製進cmsimde目錄下即可。)</p>
+<p></p>
 <p></p>
 <p><span style="background-color: #ffff00;">以ssh對Github連線</span></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffffff;">操作步驟 : </span></p>
-<p><span style="background-color: #ffffff;">1.打開start_ipv6.bat<br/><span>2.輸入sh及ssh-keygen -t rsa -b 4096 -C "使學號"產生key，打上key的產生區域。</span><br/><span>3.利用 puttygen.exe 將上述建立的 Openssh keys 轉為 putty 可以辨識的格式。</span><br/><span>4.修改啟動的 start.bat 加入下列設定:</span><br/><span>       set GIT_HOME=%Disk%:\portablegit\bin\</span><br/><span>       set GIT_SSH=%Disk%:\putty\plink.exe</span><br/><span>修改完成後,重新啟動。</span><br/><span>5.將要使用 ssh 連線的倉儲 .git 中的 config 檔案中的 url 設定改為 ssh 連線格式:url = git@github.com:倉儲名稱/cad2019.git。</span><br/><span>6.開啟 putty.exe 建立一個 session 名稱為 github.com, 其中指定 Connection &gt; Proxy 與 Connection &gt; SSH &gt; Auth。</span><br/><span>7.將下列字串加入SciTE並存儲到\.ssh\config</span><br/><span>Host github.com</span><br/><span>    User git</span><br/><span>    Port 22</span><br/><span>    Hostname github.com</span><br/><br/><span>    TCPKeepAlive yes</span><br/><span>    IdentitiesOnly yes</span><br/><span>8.將所建立的OpenSSH格式的public key內容,送到Github帳號SSH settings中。</span><br/><br/></span></p>
-<p><span style="background-color: #ffffff;">遇到的問題 :</span></p>
+<p><span style="background-color: #ffffff;">1.打開start_ipv6.bat<br/><span>2.輸入sh及ssh-keygen -t rsa -b 4096 -C "使學號"產生key，打上key的產生區域。</span><br/><span>3.利用 puttygen.exe 將上述建立的 Openssh keys 轉為 putty 可以辨識的格式。</span><br/><span>4.修改啟動的 start.bat 加入下列設定:</span><br/><span>       set GIT_HOME=%Disk%:\portablegit\bin\</span><br/><span>       set GIT_SSH=%Disk%:\putty\plink.exe</span><br/><span>修改完成後,重新啟動。</span><br/><span>5.將要使用 ssh 連線的倉儲 .git 中的 config 檔案中的 url 設定改為 ssh 連線格式:url = git@github.com:倉儲名稱/cad2019.git。</span><br/><span>6.開啟 putty.exe 建立一個 session 名稱為 github.com, 其中指定 Connection &gt; Proxy 與 Connection &gt; SSH &gt; Auth。</span><br/><span>7.將下列字串加入SciTE並存儲到\.ssh\config</span><br/><span>Host github.com</span><br/><span>    User git</span><br/><span>    Port 22</span><br/><span>    Hostname github.com</span><br/><br/><span>    TCPKeepAlive yes</span><br/><span>    IdentitiesOnly yes</span><br/><span>8.將所建立的OpenSSH格式的public key內容,加進自己的Github帳號SSH settings中。</span><br/><br/></span></p>
+<p><span style="background-color: #ffffff;"><span style="background-color: #ff0000;">遇到的問題</span> :</span></p>
 <p><span style="background-color: #ffffff;">1.putty顯示Network error: Connection refused(已解決，proxy設定錯誤)</span></p>
 <p><span style="background-color: #ffffff;"></span></p>
 <br />Week2 << <a href='Week2.html'>Previous</a> <a href='Week4.html'>Next</a> >> Week4</div>
