--- a/content/Week6.html
+++ b/content/Week6.html
@@ -133,15 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Weeks.html'>Next</a> >> Weeks<br /><h1>About</h1>
-<p></p>
-<p><a href="https://github.com/40623121/cd2021">個人倉儲</a></p>
-<p><a href="https://40623121.github.io/cd2021/content/index.html">個人網站</a></p>
-<p><a href="https://40623121.github.io/cd2021/reveal/index.html">個人簡報</a></p>
-<p><a href="https://40623121.github.io/cd2021/blog/index.html">個人網誌</a></p>
-<p><a href="https://40623121.github.io/stage1-ag2/content/index.html">分組網站</a>1</p>
-<p></p>
-<br /> <a href='Weeks.html'>Next</a> >> Weeks</div>
+    <div id="tipue_search_content">Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7<br /><h1>Week6</h1>
+<br />Week5 << <a href='Week5.html'>Previous</a> <a href='Week7.html'>Next</a> >> Week7</div>
         
     <!-- footer -->
       <div class="container">
