--- a/content/Week5.html
+++ b/content/Week5.html
@@ -136,6 +136,15 @@ img.add_border {
     <div id="tipue_search_content">Week5~9 << <a href='Week5~9.html'>Previous</a> <a href='Week6.html'>Next</a> >> Week6<br /><h1>Week5</h1>
 <p><span style="background-color: #ffff00;">排序各組簡報檔案</span></p>
 <p><span style="background-color: #ffffff;">python count mp4 time</span></p>
+<p><span style="background-color: #ffff00;">製作分組專案</span></p>
+<p><span style="background-color: #ffffff;">標題 : 2021-協同產品實習-<span>stage2-ag2</span><br/><span>專題題目 : </span><br/><span>動機 : </span></span></p>
+<p><span style="background-color: #ffffff;"><span>網站 : </span></span></p>
+<h4><span style="background-color: #ffff00;">分組專案設計與簡報重點</span></h4>
+<p><span style="background-color: #ffffff;">1.在沒有實體原型製造情況下，產出自我驗證的結果。</span></p>
+<p><span style="background-color: #ffffff;">2.設計流程以理論分析或文獻參考佐證，凸顯選定題目或結果的重要性。</span></p>
+<p><span style="background-color: #ffffff;"></span>3.善用What、Why、When、Who、How、Where?</p>
+<p>4.簡報以Web based投影片為主，方便參閱，內容要呈現重點，且文句要仔細校正。</p>
+<p><span style="background-color: #ffffff;"></span></p>
 <br />Week5~9 << <a href='Week5~9.html'>Previous</a> <a href='Week6.html'>Next</a> >> Week6</div>
         
     <!-- footer -->
