--- a/config/content.htm
+++ b/config/content.htm
@@ -5,6 +5,7 @@
 <p><a href="https://40623121.github.io/cd2021/reveal/index.html">個人簡報</a></p>
 <p><a href="https://40623121.github.io/cd2021/blog/index.html">個人網誌</a></p>
 <p><a href="https://40623121.github.io/stage1-ag2/content/index.html">分組網站</a>1</p>
+<p><a href="https://40623121.github.io/stage2-ag2/content/index.html">分組網站</a>2</p>
 <p></p>
 <h1>Weeks</h1>
 <p><a href="https://40623121.github.io/cd2021/content/Week1.html">Week1</a></p>
@@ -106,7 +107,7 @@
 <p><span style="background-color: #ffff00;">以ssh對Github連線</span></p>
 <p><span style="background-color: #ffff00;"></span></p>
 <p><span style="background-color: #ffffff;">操作步驟 : </span></p>
-<p><span style="background-color: #ffffff;">1.打開start_ipv6.bat<br/><span>2.輸入sh及ssh-keygen -t rsa -b 4096 -C "使學號"產生key，打上key的產生區域。</span><br/><span>3.利用 puttygen.exe 將上述建立的 Openssh keys 轉為 putty 可以辨識的格式。</span><br/><span>4.修改啟動的 start.bat 加入下列設定:</span><br/><span>       set GIT_HOME=%Disk%:\portablegit\bin\</span><br/><span>       set GIT_SSH=%Disk%:\putty\plink.exe</span><br/><span>修改完成後,重新啟動。</span><br/><span>5.將要使用 ssh 連線的倉儲 .git 中的 config 檔案中的 url 設定改為 ssh 連線格式:url = git@github.com:倉儲名稱/cad2019.git。</span><br/><span>6.開啟 putty.exe 建立一個 session 名稱為 github.com, 其中指定 Connection &gt; Proxy 與 Connection &gt; SSH &gt; Auth。</span><br/><span>7.將下列字串加入SciTE並存儲到\.ssh\config</span><br/><span>Host github.com</span><br/><span>    User git</span><br/><span>    Port 22</span><br/><span>    Hostname github.com</span><br/><br/><span>    TCPKeepAlive yes</span><br/><span>    IdentitiesOnly yes</span><br/><span>8.將所建立的OpenSSH格式的public key內容,加進自己的Github帳號SSH settings中。</span><br/><br/></span></p>
+<p><span style="background-color: #ffffff;">1.打開start_ipv6.bat<br/><span>2.輸入sh及ssh-keygen -t rsa -b 4096 -C "使學號"產生key，打上key的產生區域。</span><br/><span>3.利用 puttygen.exe 將上述建立的 Openssh keys 轉為 putty 可以辨識的格式。</span><br/><span>4.修改啟動的 start.bat 加入下列設定:</span><br/><span>       set GIT_HOME=%Disk%:\portablegit\bin\</span><br/><span>       set GIT_SSH=%Disk%:\putty\plink.exe</span><br/><span>修改完成後,重新啟動。</span><br/><span>5.將要使用 ssh 連線的倉儲 .git 中的 config 檔案中的 url 設定改為 ssh 連線格式:url = git@github.com:倉儲名稱/cd2021.git。</span><br/><span>6.開啟 putty.exe 建立一個 session 名稱為 github.com, 其中指定 Connection &gt; Proxy 與 Connection &gt; SSH &gt; Auth。</span><br/><span>7.將下列字串加入SciTE並存儲到\.ssh\config</span><br/><span>Host github.com</span><br/><span>    User git</span><br/><span>    Port 22</span><br/><span>    Hostname github.com</span><br/><br/><span>    TCPKeepAlive yes</span><br/><span>    IdentitiesOnly yes</span><br/><span>8.將所建立的OpenSSH格式的public key內容,加進自己的Github帳號SSH settings中。</span><br/><br/></span></p>
 <p><span style="background-color: #ffffff;"><span style="background-color: #ff0000;">遇到的問題</span> :</span></p>
 <p><span style="background-color: #ffffff;">1.putty顯示Network error: Connection refused(已解決，proxy設定錯誤)</span></p>
 <p><span style="background-color: #ffffff;"></span></p>
@@ -126,7 +127,7 @@
 <p><span style="background-color: #ffff00;">排序各組簡報檔案</span></p>
 <p><span style="background-color: #ffffff;">python count mp4 time</span></p>
 <p><span style="background-color: #ffff00;">製作分組專案</span></p>
-<p><span style="background-color: #ffffff;">標題 : 2021-協同產品實習-<span>stage2-ag</span><br/><span>專題題目 : </span><br/><span>動機 : </span></span></p>
+<p><span style="background-color: #ffffff;">標題 : 2021-協同產品實習-<span>stage2-ag2</span><br/><span>專題題目 : </span><br/><span>動機 : </span></span></p>
 <p><span style="background-color: #ffffff;"><span>網站 : </span></span></p>
 <h4><span style="background-color: #ffff00;">分組專案設計與簡報重點</span></h4>
 <p><span style="background-color: #ffffff;">1.在沒有實體原型製造情況下，產出自我驗證的結果。</span></p>
