--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -131,7 +131,8 @@
 <h4><span style="background-color: #ffff00;">分組專案設計與簡報重點</span></h4>
 <p><span style="background-color: #ffffff;">1.在沒有實體原型製造情況下，產出自我驗證的結果。</span></p>
 <p><span style="background-color: #ffffff;">2.設計流程以理論分析或文獻參考佐證，凸顯選定題目或結果的重要性。</span></p>
-<p><span style="background-color: #ffffff;"></span></p>
+<p><span style="background-color: #ffffff;"></span>3.善用What、Why、When、Who、How、Where?</p>
+<p>4.簡報以Web based投影片為主，方便參閱，內容要呈現重點，且文句要仔細校正。</p>
 <p><span style="background-color: #ffffff;"></span></p>
 <h3><span style="background-color: #ccffff;">Week6</span></h3>
 <h3><span style="background-color: #ccffff;">Week7</span></h3>
