--- a/content/index.html
+++ b/content/index.html
@@ -140,6 +140,7 @@ img.add_border {
 <p><a href="https://40623121.github.io/cd2021/reveal/index.html">個人簡報</a></p>
 <p><a href="https://40623121.github.io/cd2021/blog/index.html">個人網誌</a></p>
 <p><a href="https://40623121.github.io/stage1-ag2/content/index.html">分組網站</a>1</p>
+<p><a href="https://40623121.github.io/stage2-ag2/content/index.html">分組網站</a>2</p>
 <p></p>
 <br /> <a href='Weeks.html'>Next</a> >> Weeks</div>
         
