--- a/content/Week3.html
+++ b/content/Week3.html
@@ -162,7 +162,9 @@ img.add_border {
 <p></p>
 <p></p>
 <p><span style="background-color: #ff0000;"><strong>遇到的問題</strong></span> : </p>
-<p>1.推送後遠端沒有推送成功，且gmail顯示Page build failure(已解決，cmsimde錯誤，在cmsimde目錄下輸入git checkout 9c9d8e9即可。)</p>
+<p>1.推送後遠端沒有推送成功，且gmail顯示Page build failure(已解決，cmsimde錯誤，在cmsimde目錄下輸入git checkout 自己的分支即可。)</p>
+<p>確認分支方式</p>
+<p><img alt="" height="72" src="./../images/螢幕擷取畫面 (27).png" width="277"/></p>
 <p>2.wsgi.py打不開，顯示context.load_cert_chain('localhost.crt' . 'localhost.key')(已解決，將倉儲的兩個對應檔案複製進cmsimde目錄下即可。)</p>
 <p></p>
 <p></p>
