--- a/content/Experience.html
+++ b/content/Experience.html
@@ -148,6 +148,7 @@ img.add_border {
 <p><span style="background-color: #ccffff;">Week4</span></p>
 <p><span style="background-color: #ffffff;">如果只是單純的直線路徑並不是一個好的作品，要加入考量迴轉半徑、離心力、輪子收縮、物體加入質量、需要多大馬力起飛、加入感測器等等各種參數，當初選定題目時沒有考量那麼多，還有要有設計流程圖，很多問題都是當初沒有想到的，幸虧有老師的點醒。</span></p>
 <p><span style="background-color: #ccffff;">Week5</span></p>
+<p><span style="background-color: #ffffff;">這週開始了第二次的分組專案，我這次就不是跟第一次分組的組員了，經過了討論許久後，我們雙方都不延續之前的主題，一個因為沒什麼發展空間，一個因為要延續的話太難，所以決定做變速箱，國內沒什麼資料或設計參考圖，所以我們也找了很多國外的資料。</span></p>
 <p><span style="background-color: #ccffff;">Week6</span></p>
 <p><span style="background-color: #ccffff;">Week7</span></p>
 <p><span style="background-color: #ccffff;">Week8</span></p><br />Week10~18 << <a href='Week10~18.html'>Previous</a> </div>
